--- a/HelloWorldFunction/pom.xml
+++ b/HelloWorldFunction/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>SqrcleKeyBackup</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
-    <name>A sample Hello World created for SAM CLI.</name>
+    <name>SqrcleKeyBackup</name>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
